crates/redoubt-zero/derive/src/tests/snapshots/redoubt_zero_derive__tests__expand__snapshot_tuple_struct_with_multiple_memzer_attrs.snap
---
source: crates/redoubt-zero/derive/src/tests/expand.rs
expression: expanded(derive_input)?
---
unsafe impl<'a> redoubt_zero_core::ZeroizeMetadata for Psi<'a> {
    const CAN_BE_BULK_ZEROIZED: bool = false;
}
impl<'a> redoubt_zero_core::FastZeroizable for Psi<'a> {
    fn fast_zeroize(&mut self) {
        let fields: [&mut dyn redoubt_zero_core::FastZeroizable; 4] = [
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.0),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.2),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.3),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.4),
        ];
        redoubt_zero_core::collections::zeroize_collection(&mut fields.into_iter())
    }
}
impl<'a> redoubt_zero_core::ZeroizationProbe for Psi<'a> {
    fn is_zeroized(&self) -> bool {
        let fields: [&dyn redoubt_zero_core::ZeroizationProbe; 3] = [
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.0),
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.2),
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.3),
        ];
        redoubt_zero_core::collections::collection_zeroed(&mut fields.into_iter())
    }
}
impl<'a> Drop for Psi<'a> {
    fn drop(&mut self) {
        redoubt_zero_core::FastZeroizable::fast_zeroize(self);
    }
}
impl<'a> redoubt_zero_core::AssertZeroizeOnDrop for Psi<'a> {
    fn clone_sentinel(&self) -> redoubt_zero_core::ZeroizeOnDropSentinel {
        self.4.clone()
    }
    fn assert_zeroize_on_drop(self) {
        redoubt_zero_core::assert::assert_zeroize_on_drop(self);
    }
}
