crates/redoubt-zero/derive/src/tests/snapshots/redoubt_zero_derive__tests__expand__snapshot_tuple_struct_with_mut_ref.snap
---
source: crates/redoubt-zero/derive/src/tests/expand.rs
expression: expanded(derive_input)?
---
unsafe impl<'a> redoubt_zero_core::ZeroizeMetadata for Upsilon<'a> {
    const CAN_BE_BULK_ZEROIZED: bool = false;
}
impl<'a> redoubt_zero_core::FastZeroizable for Upsilon<'a> {
    fn fast_zeroize(&mut self) {
        let fields: [&mut dyn redoubt_zero_core::FastZeroizable; 3] = [
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.0),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(self.1),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.2),
        ];
        redoubt_zero_core::collections::zeroize_collection(&mut fields.into_iter())
    }
}
impl<'a> redoubt_zero_core::ZeroizationProbe for Upsilon<'a> {
    fn is_zeroized(&self) -> bool {
        let fields: [&dyn redoubt_zero_core::ZeroizationProbe; 2] = [
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.0),
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(self.1),
        ];
        redoubt_zero_core::collections::collection_zeroed(&mut fields.into_iter())
    }
}
impl<'a> redoubt_zero_core::AssertZeroizeOnDrop for Upsilon<'a> {
    fn clone_sentinel(&self) -> redoubt_zero_core::ZeroizeOnDropSentinel {
        self.2.clone()
    }
    fn assert_zeroize_on_drop(self) {
        redoubt_zero_core::assert::assert_zeroize_on_drop(self);
    }
}
