crates/redoubt-zero/derive/src/tests/snapshots/redoubt_zero_derive__tests__expand__snapshot_unit_struct_no_assert_zeroize_on_drop_impl.snap
---
source: crates/redoubt-zero/derive/src/tests/expand.rs
expression: expanded(derive_input)?
---
unsafe impl redoubt_zero_core::ZeroizeMetadata for Iota {
    const CAN_BE_BULK_ZEROIZED: bool = false;
}
impl redoubt_zero_core::FastZeroizable for Iota {
    fn fast_zeroize(&mut self) {
        let fields: [&mut dyn redoubt_zero_core::FastZeroizable; 0] = [];
        redoubt_zero_core::collections::zeroize_collection(&mut fields.into_iter())
    }
}
impl redoubt_zero_core::ZeroizationProbe for Iota {
    fn is_zeroized(&self) -> bool {
        let fields: [&dyn redoubt_zero_core::ZeroizationProbe; 0] = [];
        redoubt_zero_core::collections::collection_zeroed(&mut fields.into_iter())
    }
}
